@startuml example6_2
!pragma useIntermediatePackages false


class example6_2.example6_2.Bicycle {
  color: None
  bike_type: None
}
class example6_2.example6_2.Student_bike {
  bike_id: None
}
class example6_2.example6_2.Visitor_bike {
  visitor_bike_id: None
}
example6_2.example6_2.Bicycle <|-- example6_2.example6_2.Student_bike
example6_2.example6_2.Bicycle <|-- example6_2.example6_2.Visitor_bike
footer Generated by //py2puml//
@enduml
